--- a/.github/workflows/build-and-test-multi.yaml
+++ b/.github/workflows/build-and-test-multi.yaml
@@ -1,4 +1,5 @@
 name: Build & Test
+run-name: Build & Test multi
 
 on: 
     workflow_dispatch:
@@ -16,7 +17,13 @@ env:
 
 jobs:
     build-and-test:
-        runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            os: [ubuntu-latest, windows-latest, macos-latest]
+
+
+
+        runs-on: ${{matrix.os}}
 
         steps:
             - uses: actions/checkout@v4 # dont use action/checkout@main main branch could possibly change 
